编译原理实践课/CH8/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> select
Rule 2     query -> LP query RP
Rule 3     select -> SELECT list FROM table WHERE lst ORDER BY list
Rule 4     select -> SELECT list FROM table WHERE lst
Rule 5     select -> SELECT list FROM table ORDER BY list
Rule 6     select -> SELECT list FROM table
Rule 7     table -> NAME
Rule 8     table -> LP query RP
Rule 9     table -> NAME AS NAME
Rule 10    table -> table AS NAME
Rule 11    table -> table COMMA table
Rule 12    lst -> condition
Rule 13    lst -> condition AND condition
Rule 14    lst -> condition OR condition
Rule 15    lst -> NAME BETWEEN NUMBER AND NUMBER
Rule 16    lst -> NAME IN LP query RP
Rule 17    lst -> NAME < agg
Rule 18    lst -> agg < NUMBER
Rule 19    lst -> NAME > agg
Rule 20    lst -> agg > NUMBER
Rule 21    lst -> NAME = agg
Rule 22    lst -> agg = NUMBER
Rule 23    agg -> SUM LP NAME RP
Rule 24    agg -> AVG LP NAME RP
Rule 25    agg -> COUNT LP NAME RP
Rule 26    agg -> MIN LP NAME RP
Rule 27    agg -> MAX LP NAME RP
Rule 28    agg -> COUNT LP * RP
Rule 29    list -> *
Rule 30    list -> NAME
Rule 31    list -> NAME DOT NAME
Rule 32    list -> list COMMA list
Rule 33    list -> list AND NAME
Rule 34    list -> list OR NAME
Rule 35    list -> agg
Rule 36    condition -> NAME

Terminals, with rules where they appear

*                    : 28 29
<                    : 17 18
=                    : 21 22
>                    : 19 20
AND                  : 13 15 33
AS                   : 9 10
AVG                  : 24
BETWEEN              : 15
BY                   : 3 5
COMMA                : 11 32
COUNT                : 25 28
DOT                  : 31
FROM                 : 3 4 5 6
IN                   : 16
LP                   : 2 8 16 23 24 25 26 27 28
MAX                  : 27
MIN                  : 26
NAME                 : 7 9 9 10 15 16 17 19 21 23 24 25 26 27 30 31 31 33 34 36
NUMBER               : 15 15 18 20 22
OR                   : 14 34
ORDER                : 3 5
RP                   : 2 8 16 23 24 25 26 27 28
SELECT               : 3 4 5 6
SUM                  : 23
WHERE                : 3 4
error                : 

Nonterminals, with rules where they appear

agg                  : 17 18 19 20 21 22 35
condition            : 12 13 13 14 14
list                 : 3 3 4 5 5 6 32 32 33 34
lst                  : 3 4
query                : 2 8 16 0
select               : 1
table                : 3 4 5 6 10 11 11

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 1
    select                         shift and go to state 2

state 1

    (0) S' -> query .



state 2

    (1) query -> select .

    $end            reduce using rule 1 (query -> select .)
    RP              reduce using rule 1 (query -> select .)


state 3

    (2) query -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 5
    select                         shift and go to state 2

state 4

    (3) select -> SELECT . list FROM table WHERE lst ORDER BY list
    (4) select -> SELECT . list FROM table WHERE lst
    (5) select -> SELECT . list FROM table ORDER BY list
    (6) select -> SELECT . list FROM table
    (29) list -> . *
    (30) list -> . NAME
    (31) list -> . NAME DOT NAME
    (32) list -> . list COMMA list
    (33) list -> . list AND NAME
    (34) list -> . list OR NAME
    (35) list -> . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    *               shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 6
    agg                            shift and go to state 9

state 5

    (2) query -> LP query . RP

    RP              shift and go to state 15


state 6

    (3) select -> SELECT list . FROM table WHERE lst ORDER BY list
    (4) select -> SELECT list . FROM table WHERE lst
    (5) select -> SELECT list . FROM table ORDER BY list
    (6) select -> SELECT list . FROM table
    (32) list -> list . COMMA list
    (33) list -> list . AND NAME
    (34) list -> list . OR NAME

    FROM            shift and go to state 16
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19


state 7

    (29) list -> * .

    FROM            reduce using rule 29 (list -> * .)
    COMMA           reduce using rule 29 (list -> * .)
    AND             reduce using rule 29 (list -> * .)
    OR              reduce using rule 29 (list -> * .)
    $end            reduce using rule 29 (list -> * .)
    RP              reduce using rule 29 (list -> * .)


state 8

    (30) list -> NAME .
    (31) list -> NAME . DOT NAME

    FROM            reduce using rule 30 (list -> NAME .)
    COMMA           reduce using rule 30 (list -> NAME .)
    AND             reduce using rule 30 (list -> NAME .)
    OR              reduce using rule 30 (list -> NAME .)
    $end            reduce using rule 30 (list -> NAME .)
    RP              reduce using rule 30 (list -> NAME .)
    DOT             shift and go to state 20


state 9

    (35) list -> agg .

    FROM            reduce using rule 35 (list -> agg .)
    COMMA           reduce using rule 35 (list -> agg .)
    AND             reduce using rule 35 (list -> agg .)
    OR              reduce using rule 35 (list -> agg .)
    $end            reduce using rule 35 (list -> agg .)
    RP              reduce using rule 35 (list -> agg .)


state 10

    (23) agg -> SUM . LP NAME RP

    LP              shift and go to state 21


state 11

    (24) agg -> AVG . LP NAME RP

    LP              shift and go to state 22


state 12

    (25) agg -> COUNT . LP NAME RP
    (28) agg -> COUNT . LP * RP

    LP              shift and go to state 23


state 13

    (26) agg -> MIN . LP NAME RP

    LP              shift and go to state 24


state 14

    (27) agg -> MAX . LP NAME RP

    LP              shift and go to state 25


state 15

    (2) query -> LP query RP .

    $end            reduce using rule 2 (query -> LP query RP .)
    RP              reduce using rule 2 (query -> LP query RP .)


state 16

    (3) select -> SELECT list FROM . table WHERE lst ORDER BY list
    (4) select -> SELECT list FROM . table WHERE lst
    (5) select -> SELECT list FROM . table ORDER BY list
    (6) select -> SELECT list FROM . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (9) table -> . NAME AS NAME
    (10) table -> . table AS NAME
    (11) table -> . table COMMA table

    NAME            shift and go to state 27
    LP              shift and go to state 28

    table                          shift and go to state 26

state 17

    (32) list -> list COMMA . list
    (29) list -> . *
    (30) list -> . NAME
    (31) list -> . NAME DOT NAME
    (32) list -> . list COMMA list
    (33) list -> . list AND NAME
    (34) list -> . list OR NAME
    (35) list -> . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    *               shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 29
    agg                            shift and go to state 9

state 18

    (33) list -> list AND . NAME

    NAME            shift and go to state 30


state 19

    (34) list -> list OR . NAME

    NAME            shift and go to state 31


state 20

    (31) list -> NAME DOT . NAME

    NAME            shift and go to state 32


state 21

    (23) agg -> SUM LP . NAME RP

    NAME            shift and go to state 33


state 22

    (24) agg -> AVG LP . NAME RP

    NAME            shift and go to state 34


state 23

    (25) agg -> COUNT LP . NAME RP
    (28) agg -> COUNT LP . * RP

    NAME            shift and go to state 35
    *               shift and go to state 36


state 24

    (26) agg -> MIN LP . NAME RP

    NAME            shift and go to state 37


state 25

    (27) agg -> MAX LP . NAME RP

    NAME            shift and go to state 38


state 26

    (3) select -> SELECT list FROM table . WHERE lst ORDER BY list
    (4) select -> SELECT list FROM table . WHERE lst
    (5) select -> SELECT list FROM table . ORDER BY list
    (6) select -> SELECT list FROM table .
    (10) table -> table . AS NAME
    (11) table -> table . COMMA table

    WHERE           shift and go to state 39
    ORDER           shift and go to state 40
    $end            reduce using rule 6 (select -> SELECT list FROM table .)
    RP              reduce using rule 6 (select -> SELECT list FROM table .)
    AS              shift and go to state 41
    COMMA           shift and go to state 42


state 27

    (7) table -> NAME .
    (9) table -> NAME . AS NAME

  ! shift/reduce conflict for AS resolved as shift
    WHERE           reduce using rule 7 (table -> NAME .)
    ORDER           reduce using rule 7 (table -> NAME .)
    COMMA           reduce using rule 7 (table -> NAME .)
    $end            reduce using rule 7 (table -> NAME .)
    RP              reduce using rule 7 (table -> NAME .)
    AS              shift and go to state 43

  ! AS              [ reduce using rule 7 (table -> NAME .) ]


state 28

    (8) table -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 44
    select                         shift and go to state 2

state 29

    (32) list -> list COMMA list .
    (32) list -> list . COMMA list
    (33) list -> list . AND NAME
    (34) list -> list . OR NAME

  ! shift/reduce conflict for COMMA resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    FROM            reduce using rule 32 (list -> list COMMA list .)
    $end            reduce using rule 32 (list -> list COMMA list .)
    RP              reduce using rule 32 (list -> list COMMA list .)
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19

  ! COMMA           [ reduce using rule 32 (list -> list COMMA list .) ]
  ! AND             [ reduce using rule 32 (list -> list COMMA list .) ]
  ! OR              [ reduce using rule 32 (list -> list COMMA list .) ]


state 30

    (33) list -> list AND NAME .

    FROM            reduce using rule 33 (list -> list AND NAME .)
    COMMA           reduce using rule 33 (list -> list AND NAME .)
    AND             reduce using rule 33 (list -> list AND NAME .)
    OR              reduce using rule 33 (list -> list AND NAME .)
    $end            reduce using rule 33 (list -> list AND NAME .)
    RP              reduce using rule 33 (list -> list AND NAME .)


state 31

    (34) list -> list OR NAME .

    FROM            reduce using rule 34 (list -> list OR NAME .)
    COMMA           reduce using rule 34 (list -> list OR NAME .)
    AND             reduce using rule 34 (list -> list OR NAME .)
    OR              reduce using rule 34 (list -> list OR NAME .)
    $end            reduce using rule 34 (list -> list OR NAME .)
    RP              reduce using rule 34 (list -> list OR NAME .)


state 32

    (31) list -> NAME DOT NAME .

    FROM            reduce using rule 31 (list -> NAME DOT NAME .)
    COMMA           reduce using rule 31 (list -> NAME DOT NAME .)
    AND             reduce using rule 31 (list -> NAME DOT NAME .)
    OR              reduce using rule 31 (list -> NAME DOT NAME .)
    $end            reduce using rule 31 (list -> NAME DOT NAME .)
    RP              reduce using rule 31 (list -> NAME DOT NAME .)


state 33

    (23) agg -> SUM LP NAME . RP

    RP              shift and go to state 45


state 34

    (24) agg -> AVG LP NAME . RP

    RP              shift and go to state 46


state 35

    (25) agg -> COUNT LP NAME . RP

    RP              shift and go to state 47


state 36

    (28) agg -> COUNT LP * . RP

    RP              shift and go to state 48


state 37

    (26) agg -> MIN LP NAME . RP

    RP              shift and go to state 49


state 38

    (27) agg -> MAX LP NAME . RP

    RP              shift and go to state 50


state 39

    (3) select -> SELECT list FROM table WHERE . lst ORDER BY list
    (4) select -> SELECT list FROM table WHERE . lst
    (12) lst -> . condition
    (13) lst -> . condition AND condition
    (14) lst -> . condition OR condition
    (15) lst -> . NAME BETWEEN NUMBER AND NUMBER
    (16) lst -> . NAME IN LP query RP
    (17) lst -> . NAME < agg
    (18) lst -> . agg < NUMBER
    (19) lst -> . NAME > agg
    (20) lst -> . agg > NUMBER
    (21) lst -> . NAME = agg
    (22) lst -> . agg = NUMBER
    (36) condition -> . NAME
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    NAME            shift and go to state 53
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    lst                            shift and go to state 51
    condition                      shift and go to state 52
    agg                            shift and go to state 54

state 40

    (5) select -> SELECT list FROM table ORDER . BY list

    BY              shift and go to state 55


state 41

    (10) table -> table AS . NAME

    NAME            shift and go to state 56


state 42

    (11) table -> table COMMA . table
    (7) table -> . NAME
    (8) table -> . LP query RP
    (9) table -> . NAME AS NAME
    (10) table -> . table AS NAME
    (11) table -> . table COMMA table

    NAME            shift and go to state 27
    LP              shift and go to state 28

    table                          shift and go to state 57

state 43

    (9) table -> NAME AS . NAME

    NAME            shift and go to state 58


state 44

    (8) table -> LP query . RP

    RP              shift and go to state 59


state 45

    (23) agg -> SUM LP NAME RP .

    FROM            reduce using rule 23 (agg -> SUM LP NAME RP .)
    COMMA           reduce using rule 23 (agg -> SUM LP NAME RP .)
    AND             reduce using rule 23 (agg -> SUM LP NAME RP .)
    OR              reduce using rule 23 (agg -> SUM LP NAME RP .)
    $end            reduce using rule 23 (agg -> SUM LP NAME RP .)
    RP              reduce using rule 23 (agg -> SUM LP NAME RP .)
    <               reduce using rule 23 (agg -> SUM LP NAME RP .)
    >               reduce using rule 23 (agg -> SUM LP NAME RP .)
    =               reduce using rule 23 (agg -> SUM LP NAME RP .)
    ORDER           reduce using rule 23 (agg -> SUM LP NAME RP .)


state 46

    (24) agg -> AVG LP NAME RP .

    FROM            reduce using rule 24 (agg -> AVG LP NAME RP .)
    COMMA           reduce using rule 24 (agg -> AVG LP NAME RP .)
    AND             reduce using rule 24 (agg -> AVG LP NAME RP .)
    OR              reduce using rule 24 (agg -> AVG LP NAME RP .)
    $end            reduce using rule 24 (agg -> AVG LP NAME RP .)
    RP              reduce using rule 24 (agg -> AVG LP NAME RP .)
    <               reduce using rule 24 (agg -> AVG LP NAME RP .)
    >               reduce using rule 24 (agg -> AVG LP NAME RP .)
    =               reduce using rule 24 (agg -> AVG LP NAME RP .)
    ORDER           reduce using rule 24 (agg -> AVG LP NAME RP .)


state 47

    (25) agg -> COUNT LP NAME RP .

    FROM            reduce using rule 25 (agg -> COUNT LP NAME RP .)
    COMMA           reduce using rule 25 (agg -> COUNT LP NAME RP .)
    AND             reduce using rule 25 (agg -> COUNT LP NAME RP .)
    OR              reduce using rule 25 (agg -> COUNT LP NAME RP .)
    $end            reduce using rule 25 (agg -> COUNT LP NAME RP .)
    RP              reduce using rule 25 (agg -> COUNT LP NAME RP .)
    <               reduce using rule 25 (agg -> COUNT LP NAME RP .)
    >               reduce using rule 25 (agg -> COUNT LP NAME RP .)
    =               reduce using rule 25 (agg -> COUNT LP NAME RP .)
    ORDER           reduce using rule 25 (agg -> COUNT LP NAME RP .)


state 48

    (28) agg -> COUNT LP * RP .

    FROM            reduce using rule 28 (agg -> COUNT LP * RP .)
    COMMA           reduce using rule 28 (agg -> COUNT LP * RP .)
    AND             reduce using rule 28 (agg -> COUNT LP * RP .)
    OR              reduce using rule 28 (agg -> COUNT LP * RP .)
    $end            reduce using rule 28 (agg -> COUNT LP * RP .)
    RP              reduce using rule 28 (agg -> COUNT LP * RP .)
    <               reduce using rule 28 (agg -> COUNT LP * RP .)
    >               reduce using rule 28 (agg -> COUNT LP * RP .)
    =               reduce using rule 28 (agg -> COUNT LP * RP .)
    ORDER           reduce using rule 28 (agg -> COUNT LP * RP .)


state 49

    (26) agg -> MIN LP NAME RP .

    FROM            reduce using rule 26 (agg -> MIN LP NAME RP .)
    COMMA           reduce using rule 26 (agg -> MIN LP NAME RP .)
    AND             reduce using rule 26 (agg -> MIN LP NAME RP .)
    OR              reduce using rule 26 (agg -> MIN LP NAME RP .)
    $end            reduce using rule 26 (agg -> MIN LP NAME RP .)
    RP              reduce using rule 26 (agg -> MIN LP NAME RP .)
    <               reduce using rule 26 (agg -> MIN LP NAME RP .)
    >               reduce using rule 26 (agg -> MIN LP NAME RP .)
    =               reduce using rule 26 (agg -> MIN LP NAME RP .)
    ORDER           reduce using rule 26 (agg -> MIN LP NAME RP .)


state 50

    (27) agg -> MAX LP NAME RP .

    FROM            reduce using rule 27 (agg -> MAX LP NAME RP .)
    COMMA           reduce using rule 27 (agg -> MAX LP NAME RP .)
    AND             reduce using rule 27 (agg -> MAX LP NAME RP .)
    OR              reduce using rule 27 (agg -> MAX LP NAME RP .)
    $end            reduce using rule 27 (agg -> MAX LP NAME RP .)
    RP              reduce using rule 27 (agg -> MAX LP NAME RP .)
    <               reduce using rule 27 (agg -> MAX LP NAME RP .)
    >               reduce using rule 27 (agg -> MAX LP NAME RP .)
    =               reduce using rule 27 (agg -> MAX LP NAME RP .)
    ORDER           reduce using rule 27 (agg -> MAX LP NAME RP .)


state 51

    (3) select -> SELECT list FROM table WHERE lst . ORDER BY list
    (4) select -> SELECT list FROM table WHERE lst .

    ORDER           shift and go to state 60
    $end            reduce using rule 4 (select -> SELECT list FROM table WHERE lst .)
    RP              reduce using rule 4 (select -> SELECT list FROM table WHERE lst .)


state 52

    (12) lst -> condition .
    (13) lst -> condition . AND condition
    (14) lst -> condition . OR condition

    ORDER           reduce using rule 12 (lst -> condition .)
    $end            reduce using rule 12 (lst -> condition .)
    RP              reduce using rule 12 (lst -> condition .)
    AND             shift and go to state 61
    OR              shift and go to state 62


state 53

    (15) lst -> NAME . BETWEEN NUMBER AND NUMBER
    (16) lst -> NAME . IN LP query RP
    (17) lst -> NAME . < agg
    (19) lst -> NAME . > agg
    (21) lst -> NAME . = agg
    (36) condition -> NAME .

    BETWEEN         shift and go to state 63
    IN              shift and go to state 64
    <               shift and go to state 65
    >               shift and go to state 66
    =               shift and go to state 67
    AND             reduce using rule 36 (condition -> NAME .)
    OR              reduce using rule 36 (condition -> NAME .)
    ORDER           reduce using rule 36 (condition -> NAME .)
    $end            reduce using rule 36 (condition -> NAME .)
    RP              reduce using rule 36 (condition -> NAME .)


state 54

    (18) lst -> agg . < NUMBER
    (20) lst -> agg . > NUMBER
    (22) lst -> agg . = NUMBER

    <               shift and go to state 68
    >               shift and go to state 69
    =               shift and go to state 70


state 55

    (5) select -> SELECT list FROM table ORDER BY . list
    (29) list -> . *
    (30) list -> . NAME
    (31) list -> . NAME DOT NAME
    (32) list -> . list COMMA list
    (33) list -> . list AND NAME
    (34) list -> . list OR NAME
    (35) list -> . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    *               shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 71
    agg                            shift and go to state 9

state 56

    (10) table -> table AS NAME .

    WHERE           reduce using rule 10 (table -> table AS NAME .)
    ORDER           reduce using rule 10 (table -> table AS NAME .)
    AS              reduce using rule 10 (table -> table AS NAME .)
    COMMA           reduce using rule 10 (table -> table AS NAME .)
    $end            reduce using rule 10 (table -> table AS NAME .)
    RP              reduce using rule 10 (table -> table AS NAME .)


state 57

    (11) table -> table COMMA table .
    (10) table -> table . AS NAME
    (11) table -> table . COMMA table

  ! shift/reduce conflict for AS resolved as shift
  ! shift/reduce conflict for COMMA resolved as shift
    WHERE           reduce using rule 11 (table -> table COMMA table .)
    ORDER           reduce using rule 11 (table -> table COMMA table .)
    $end            reduce using rule 11 (table -> table COMMA table .)
    RP              reduce using rule 11 (table -> table COMMA table .)
    AS              shift and go to state 41
    COMMA           shift and go to state 42

  ! AS              [ reduce using rule 11 (table -> table COMMA table .) ]
  ! COMMA           [ reduce using rule 11 (table -> table COMMA table .) ]


state 58

    (9) table -> NAME AS NAME .

    WHERE           reduce using rule 9 (table -> NAME AS NAME .)
    ORDER           reduce using rule 9 (table -> NAME AS NAME .)
    AS              reduce using rule 9 (table -> NAME AS NAME .)
    COMMA           reduce using rule 9 (table -> NAME AS NAME .)
    $end            reduce using rule 9 (table -> NAME AS NAME .)
    RP              reduce using rule 9 (table -> NAME AS NAME .)


state 59

    (8) table -> LP query RP .

    WHERE           reduce using rule 8 (table -> LP query RP .)
    ORDER           reduce using rule 8 (table -> LP query RP .)
    AS              reduce using rule 8 (table -> LP query RP .)
    COMMA           reduce using rule 8 (table -> LP query RP .)
    $end            reduce using rule 8 (table -> LP query RP .)
    RP              reduce using rule 8 (table -> LP query RP .)


state 60

    (3) select -> SELECT list FROM table WHERE lst ORDER . BY list

    BY              shift and go to state 72


state 61

    (13) lst -> condition AND . condition
    (36) condition -> . NAME

    NAME            shift and go to state 74

    condition                      shift and go to state 73

state 62

    (14) lst -> condition OR . condition
    (36) condition -> . NAME

    NAME            shift and go to state 74

    condition                      shift and go to state 75

state 63

    (15) lst -> NAME BETWEEN . NUMBER AND NUMBER

    NUMBER          shift and go to state 76


state 64

    (16) lst -> NAME IN . LP query RP

    LP              shift and go to state 77


state 65

    (17) lst -> NAME < . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    agg                            shift and go to state 78

state 66

    (19) lst -> NAME > . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    agg                            shift and go to state 79

state 67

    (21) lst -> NAME = . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    agg                            shift and go to state 80

state 68

    (18) lst -> agg < . NUMBER

    NUMBER          shift and go to state 81


state 69

    (20) lst -> agg > . NUMBER

    NUMBER          shift and go to state 82


state 70

    (22) lst -> agg = . NUMBER

    NUMBER          shift and go to state 83


state 71

    (5) select -> SELECT list FROM table ORDER BY list .
    (32) list -> list . COMMA list
    (33) list -> list . AND NAME
    (34) list -> list . OR NAME

    $end            reduce using rule 5 (select -> SELECT list FROM table ORDER BY list .)
    RP              reduce using rule 5 (select -> SELECT list FROM table ORDER BY list .)
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19


state 72

    (3) select -> SELECT list FROM table WHERE lst ORDER BY . list
    (29) list -> . *
    (30) list -> . NAME
    (31) list -> . NAME DOT NAME
    (32) list -> . list COMMA list
    (33) list -> . list AND NAME
    (34) list -> . list OR NAME
    (35) list -> . agg
    (23) agg -> . SUM LP NAME RP
    (24) agg -> . AVG LP NAME RP
    (25) agg -> . COUNT LP NAME RP
    (26) agg -> . MIN LP NAME RP
    (27) agg -> . MAX LP NAME RP
    (28) agg -> . COUNT LP * RP

    *               shift and go to state 7
    NAME            shift and go to state 8
    SUM             shift and go to state 10
    AVG             shift and go to state 11
    COUNT           shift and go to state 12
    MIN             shift and go to state 13
    MAX             shift and go to state 14

    list                           shift and go to state 84
    agg                            shift and go to state 9

state 73

    (13) lst -> condition AND condition .

    ORDER           reduce using rule 13 (lst -> condition AND condition .)
    $end            reduce using rule 13 (lst -> condition AND condition .)
    RP              reduce using rule 13 (lst -> condition AND condition .)


state 74

    (36) condition -> NAME .

    ORDER           reduce using rule 36 (condition -> NAME .)
    $end            reduce using rule 36 (condition -> NAME .)
    RP              reduce using rule 36 (condition -> NAME .)


state 75

    (14) lst -> condition OR condition .

    ORDER           reduce using rule 14 (lst -> condition OR condition .)
    $end            reduce using rule 14 (lst -> condition OR condition .)
    RP              reduce using rule 14 (lst -> condition OR condition .)


state 76

    (15) lst -> NAME BETWEEN NUMBER . AND NUMBER

    AND             shift and go to state 85


state 77

    (16) lst -> NAME IN LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE lst ORDER BY list
    (4) select -> . SELECT list FROM table WHERE lst
    (5) select -> . SELECT list FROM table ORDER BY list
    (6) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 86
    select                         shift and go to state 2

state 78

    (17) lst -> NAME < agg .

    ORDER           reduce using rule 17 (lst -> NAME < agg .)
    $end            reduce using rule 17 (lst -> NAME < agg .)
    RP              reduce using rule 17 (lst -> NAME < agg .)


state 79

    (19) lst -> NAME > agg .

    ORDER           reduce using rule 19 (lst -> NAME > agg .)
    $end            reduce using rule 19 (lst -> NAME > agg .)
    RP              reduce using rule 19 (lst -> NAME > agg .)


state 80

    (21) lst -> NAME = agg .

    ORDER           reduce using rule 21 (lst -> NAME = agg .)
    $end            reduce using rule 21 (lst -> NAME = agg .)
    RP              reduce using rule 21 (lst -> NAME = agg .)


state 81

    (18) lst -> agg < NUMBER .

    ORDER           reduce using rule 18 (lst -> agg < NUMBER .)
    $end            reduce using rule 18 (lst -> agg < NUMBER .)
    RP              reduce using rule 18 (lst -> agg < NUMBER .)


state 82

    (20) lst -> agg > NUMBER .

    ORDER           reduce using rule 20 (lst -> agg > NUMBER .)
    $end            reduce using rule 20 (lst -> agg > NUMBER .)
    RP              reduce using rule 20 (lst -> agg > NUMBER .)


state 83

    (22) lst -> agg = NUMBER .

    ORDER           reduce using rule 22 (lst -> agg = NUMBER .)
    $end            reduce using rule 22 (lst -> agg = NUMBER .)
    RP              reduce using rule 22 (lst -> agg = NUMBER .)


state 84

    (3) select -> SELECT list FROM table WHERE lst ORDER BY list .
    (32) list -> list . COMMA list
    (33) list -> list . AND NAME
    (34) list -> list . OR NAME

    $end            reduce using rule 3 (select -> SELECT list FROM table WHERE lst ORDER BY list .)
    RP              reduce using rule 3 (select -> SELECT list FROM table WHERE lst ORDER BY list .)
    COMMA           shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19


state 85

    (15) lst -> NAME BETWEEN NUMBER AND . NUMBER

    NUMBER          shift and go to state 87


state 86

    (16) lst -> NAME IN LP query . RP

    RP              shift and go to state 88


state 87

    (15) lst -> NAME BETWEEN NUMBER AND NUMBER .

    ORDER           reduce using rule 15 (lst -> NAME BETWEEN NUMBER AND NUMBER .)
    $end            reduce using rule 15 (lst -> NAME BETWEEN NUMBER AND NUMBER .)
    RP              reduce using rule 15 (lst -> NAME BETWEEN NUMBER AND NUMBER .)


state 88

    (16) lst -> NAME IN LP query RP .

    ORDER           reduce using rule 16 (lst -> NAME IN LP query RP .)
    $end            reduce using rule 16 (lst -> NAME IN LP query RP .)
    RP              reduce using rule 16 (lst -> NAME IN LP query RP .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for AS in state 27 resolved as shift
WARNING: shift/reduce conflict for COMMA in state 29 resolved as shift
WARNING: shift/reduce conflict for AND in state 29 resolved as shift
WARNING: shift/reduce conflict for OR in state 29 resolved as shift
WARNING: shift/reduce conflict for AS in state 57 resolved as shift
WARNING: shift/reduce conflict for COMMA in state 57 resolved as shift
